tests/fixtures/invalid/missing_colon.yaml.tftpl
main:
  steps:
    - step1
        assign:
          - result: "value"
